// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageContainer content is text and title is null 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-content"
      >
        <div
          class="ant-pro-page-container-detail"
        >
          <div
            class="ant-pro-page-container-main"
          >
            <div
              class="ant-pro-page-container-row"
            >
              <div
                class="ant-pro-page-container-content"
              >
                just so so
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer content is text and title is null 2`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-content"
      >
        <div
          class="ant-pro-page-container-detail"
        >
          <div
            class="ant-pro-page-container-main"
          >
            <div
              class="ant-pro-page-container-row"
            >
              <div
                class="ant-pro-page-container-extraContent"
              >
                <div>
                  extraContent
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer ⚡️ support fixHeader 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer ⚡️ support fixedHeader 1`] = `
<div
  class="ant-pro-page-container"
>
  <div>
    <div
      class=""
    >
      <div
        class="ant-pro-page-container-warp"
      >
        <div
          class="ant-page-header ant-page-header-ghost"
        >
          <div
            class="ant-page-header-heading"
          >
            <div
              class="ant-page-header-heading-left"
            >
              <span
                class="ant-page-header-heading-title"
                title="期贤"
              >
                期贤
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer ⚡️ support footer 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        right
      </button>
    </div>
  </div>
</div>
`;

exports[`PageContainer ⚡️ support loading 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    >
      <div
        style="padding-top:100px;text-align:center"
      >
        <div
          class="ant-spin ant-spin-lg ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContainer 🐲 FooterToolbar should know width 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-top-menu ant-pro-basicLayout-top"
>
  <section
    class="ant-layout"
    style="min-height: 100%;"
  >
    <div
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header ant-pro-top-menu"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 19;"
      >
        <div
          class="ant-pro-top-nav-header"
        >
          <div
            class="ant-pro-top-nav-header-main "
          >
            <div
              class="ant-pro-top-nav-header-main-left"
            >
              <div
                class="ant-pro-top-nav-header-logo"
                id="logo"
              >
                <a>
                  <img
                    alt="logo"
                    src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
                  />
                  <h1>
                    Ant Design Pro
                  </h1>
                </a>
              </div>
            </div>
            <div
              class="ant-pro-top-nav-header-menu"
              style="flex: 1;"
            />
          </div>
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      >
        <div
          class="ant-pro-page-container"
        >
          <div
            class="ant-pro-page-container-warp"
          >
            <div
              class="ant-page-header ant-page-header-ghost"
            >
              <div
                class="ant-page-header-heading"
              >
                <div
                  class="ant-page-header-heading-left"
                >
                  <span
                    class="ant-page-header-heading-title"
                    title="Ant Design Pro"
                  >
                    Ant Design Pro
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-grid-content"
          >
            <div
              class="ant-pro-grid-content-children"
            >
              <div>
                <div
                  class="ant-pro-page-container-children-content"
                >
                  <div
                    class="ant-pro-footer-bar"
                    style="width: 100%;"
                  >
                    <div
                      class="ant-pro-footer-bar-left"
                    />
                    <div
                      class="ant-pro-footer-bar-right"
                    >
                      <button
                        type="button"
                      >
                        qixian
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  style="height: 48px; margin-top: 24px;"
                />
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </section>
</div>
`;

exports[`PageContainer 🐲 footer is null, do not render footerToolbar  1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        qixian
      </button>
    </div>
  </div>
</div>
`;

exports[`PageContainer 🐲 footer is null, do not render footerToolbar  2`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer 🐲 footer should know width 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md ant-pro-basicLayout-top-menu ant-pro-basicLayout-top"
>
  <section
    class="ant-layout"
    style="min-height: 100%;"
  >
    <div
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header ant-pro-top-menu"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 19;"
      >
        <div
          class="ant-pro-top-nav-header"
        >
          <div
            class="ant-pro-top-nav-header-main "
          >
            <div
              class="ant-pro-top-nav-header-main-left"
            >
              <div
                class="ant-pro-top-nav-header-logo"
                id="logo"
              >
                <a>
                  <img
                    alt="logo"
                    src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
                  />
                  <h1>
                    Ant Design Pro
                  </h1>
                </a>
              </div>
            </div>
            <div
              class="ant-pro-top-nav-header-menu"
              style="flex: 1;"
            />
          </div>
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      >
        <div
          class="ant-pro-page-container"
        >
          <div
            class="ant-pro-page-container-warp"
          >
            <div
              class="ant-page-header ant-page-header-ghost"
            >
              <div
                class="ant-page-header-heading"
              >
                <div
                  class="ant-page-header-heading-left"
                >
                  <span
                    class="ant-page-header-heading-title"
                    title="期贤"
                  >
                    期贤
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-grid-content"
          >
            <div
              class="ant-pro-grid-content-children"
            />
          </div>
          <div
            class="ant-pro-footer-bar"
            style="width: 100%;"
          >
            <div
              class="ant-pro-footer-bar-left"
            />
            <div
              class="ant-pro-footer-bar-right"
            >
              <button
                type="button"
              >
                qixian
              </button>
            </div>
          </div>
        </div>
      </main>
    </div>
  </section>
</div>
`;

exports[`PageContainer 🐲 header.footer is null, do not render footerToolbar  1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        qixian
      </button>
    </div>
  </div>
</div>
`;

exports[`PageContainer 🐲 header.footer is null, do not render footerToolbar  2`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        qixian
      </button>
    </div>
  </div>
</div>
`;

exports[`PageContainer 💄 base use 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer 💄 config is null 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
</div>
`;

exports[`PageContainer 🔥 footer bar support extra 1`] = `
<div
  class="qixian_footer ant-pro-footer-bar"
>
  <div
    class="ant-pro-footer-bar-left"
  >
    <img
      alt="logo"
      src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
    />
  </div>
  <div
    class="ant-pro-footer-bar-right"
  >
    <button
      type="button"
    >
      right
    </button>
  </div>
</div>
`;

exports[`PageContainer 🔥 footer bar support renderContent 1`] = `
<div
  class="qixian_footer ant-pro-footer-bar"
>
  home_toolbar
</div>
`;

exports[`PageContainer 🔥 support footer and breadcrumb 1`] = `
<div
  class="ant-pro-page-container"
>
  <div
    class="ant-pro-page-container-warp"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <div
        class="ant-breadcrumb"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            <span>
              home
            </span>
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-grid-content"
  >
    <div
      class="ant-pro-grid-content-children"
    />
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        right
      </button>
    </div>
  </div>
</div>
`;
